Fix website notes on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -156,6 +156,7 @@ b {
       flex: 1;
       display: flex;
       align-items: center;
+      flex-wrap: wrap;
     }
 
     &__icon {
